widget detail buttons alignment problem fixed.

--- a/plugins/star-rating/frontend/public/stylesheets/widget-detail.scss
+++ b/plugins/star-rating/frontend/public/stylesheets/widget-detail.scss
@@ -5,6 +5,10 @@
     font-weight: 400;
   }
 
+  &__edit-widget {
+    float: none !important;
+  }
+
   &__ID {
     font-size: 14px;
     font-weight: 500;
